Add header and footer for improved UI

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,33 @@
   box-sizing: border-box;
 }
 
+/* Header */
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #333;
+  color: #f4f4f4;
+  padding: 0.5rem 1rem;
+  position: fixed;
+  height: 7rem;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+header span{
+  font-size: 1.5rem;
+  font-weight: 900;
+}
+
+header button{
+  width: 12rem;
+}
 /* Container */
 
 .container {
-  max-width: 800px;
-  margin: auto;
+  margin: 7rem auto 0;
   padding: 1rem;
   background: #f4f4f4;
 }
@@ -60,7 +82,7 @@ textarea {
 
 /* Buttons */
 button {
-  padding: 0.6rem 1rem;
+  padding: 0.6rem;
   font-size: 1rem;
   border: none;
   border-radius: 0.5rem;
@@ -94,6 +116,14 @@ form button {
   margin-bottom: 0.75rem;
   color: #555;
   line-height: 1.5rem;
+}
+
+footer{
+  background: #333;
+  color: #f4f4f4;
+  padding: 1rem;
+  text-align: center;
+  width: 100%;
 }
 
 /* Responsiveness */
